[gd_scene load_steps=2 format=3 uid="uid://foaip57ooeuo"]

[ext_resource type="Script" path="res://codes/main_menu.gd" id="1_ktcy2"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ktcy2")

[node name="Titel" type="Label" parent="."]
offset_left = 512.0
offset_top = 229.0
offset_right = 615.0
offset_bottom = 252.0
text = "Paul war hier"

[node name="menu_buttons" type="VFlowContainer" parent="."]
offset_left = 521.0
offset_top = 268.0
offset_right = 608.0
offset_bottom = 419.0

[node name="Start" type="Button" parent="menu_buttons"]
layout_mode = 2
text = "START"

[node name="Fullscreen" type="Button" parent="menu_buttons"]
layout_mode = 2
text = "Fullscreen"

[node name="Quit" type="Button" parent="menu_buttons"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="menu_buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="menu_buttons/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="menu_buttons/Quit" to="." method="_on_quit_pressed"]
